# Winter-Game

./: .gitignore  .replit  CMakeLists.txt  CMakePresets.json  README.md  replit.nix
cmake/: vs_source_groups.cmake
engine/: CMakeLists.txt  README.md
engine/cmake/: imgui.cmake
engine/include/: GLAPI.h  camera.h  event.h  file_io.h  framebuffer.h  imgui_setup.h  input.h  io.h  light.h  log.h  mesh.h  mesh_generator.h  object.h  platform.h  renderer.h  renderer2d.h  shader.h  spriteset.h  surface.h  texture.h  tilemap.h  transform.h  utils.h  window.h
engine/include/audio/: AudioFile.h  audio.h  buffer.h  source.h
engine/include/math/: intersection.h
engine/include/physics/: world2d.h
engine/include/scene/: actor.h  colliders.h  custom_render_method.h  rigidbodies.h  sprite.h  sprite_actor.h  transform.h
engine/include/ui/: button.h  font.h  text-renderer.cpp  text-renderer.h
engine/lib/glad/: CMakeLists.txt
engine/lib/glad/include/glad/: glad.h
engine/lib/glad/src/: glad.c
engine/lib/par_shapes/: par_shapes.h
engine/src/: camera.cpp  file_io.cpp  framebuffer.cpp  imgui_setup.cpp  input.cpp  io.cpp  log.cpp  mesh.cpp  mesh_generator.cpp  object.cpp  renderer.cpp  renderer2d.cpp  shader.cpp  spriteset.cpp  texture.cpp  tilemap.cpp  window.cpp
engine/src/audio/: audio.cpp  buffer.cpp  source.cpp
engine/src/math/: intersection.cpp
engine/src/physics/: world2d.cpp
engine/src/scene/: actor.cpp  colliders.cpp  sprite_actor.cpp
engine/src/ui/: button.cpp  font.cpp  text-renderer.cpp
res/: data_structures.md  input.json
res/dialogues/: dialogue.json
res/fonts/: README.txt
res/models/: house.blend  house.blend1  house.glb
res/rooms/: rooms.json
res/shaders/: entity.vert  fragment.frag  fragment.fsh  glyph.frag  glyph.vert  line.frag  line.vert  sprite_2d.frag  sprite_2d.vert  vertex.vert  vertex.vsh
res/shaders/post/: copy.frag  copy.vert
res/textures/: allow_button.pdn  deny_button.pdn  scale_holder.pdn  screen_layout.pdn  stone.kra
res/textures/skybox/: license.txt
src/: application.cpp  application.h  camera_controller.cpp  camera_controller.h  colors.h  consts.h  dialogue.cpp  dialogue.h  direction.h  draggable_component.cpp  draggable_component.h  game.cpp  game.h  main.cpp  player.cpp  player.h  room_manager.cpp  room_manager.h  tilemap_editor.cpp  tilemap_editor.h
